--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
             <select id="fromCurrency">
                 <option value="something">something</option>
             </select> 
+            <input type="button" id="SubmitButton" value="Submit">
         </form>
+        <script type="type/javascript" src="script.js">
+        </script>
+
     </div>
     <div id="footer">
-        <a class="github-link"></a>
+        <a id="github-link"></a>
     </div>
+   
 </body>
