Got the js to be found.

--- a/index.html
+++ b/index.html
@@ -15,12 +15,17 @@
             </select> 
             <input type="button" id="SubmitButton" value="Submit">
         </form>
-        <script type="type/javascript" src="script.js">
-        </script>
+        <form>
+            <input type="text" id="ExchangeAmount2">
+            <select id="toCurrency">
+                <option value="something">something</option>
+            </select>
+        </form>
+        
+    <script src="/script.js"></script>
 
     </div>
     <div id="footer">
         <a id="github-link"></a>
     </div>
-   
 </body>
