Started the event listeners. API isn't working yet.

--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
         <form>
             <input type="text" id="ExchangeAmount">
             <select id="fromCurrency">
-                <option value="something">something</option>
+                <option value="default">default</option>
+                <option value="USD">US Dollars</option>
+                <option value="AUD">Austrailian Dollars</option>
             </select> 
             <input type="button" id="SubmitButton" value="Submit">
         </form>
         <form>
             <input type="text" id="ExchangeAmount2">
             <select id="toCurrency">
-                <option value="something">something</option>
+                <option value="default">default</option>
+                <option value="USD">US Dollars</option>
+                <option value="AUD">Austrailian Dollars</option>
             </select>
         </form>
         
