The API is now working.
The API is returning a response and then() returns the json. Using that
json I've got the conversion working correctly, as well as a backwards
conversion. Now just need to update the date and time, then make the
website look nice.

--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
 <body>
     <div id="page">
         <h1>Currency Exchange</h1>
+        <div class="info-box">
+            <div id="date"></div>
+            <div id="time"></div>
+        </div>
         <form>
             <input type="text" id="ExchangeAmount">
             <select id="fromCurrency">
                 <option value="default">default</option>
                 <option value="USD">US Dollars</option>
                 <option value="AUD">Austrailian Dollars</option>
-            </select> 
-            <input type="button" id="SubmitButton" value="Submit">
+            </select>
         </form>
         <form>
             <input type="text" id="ExchangeAmount2">
@@ -25,8 +28,8 @@
                 <option value="AUD">Austrailian Dollars</option>
             </select>
         </form>
-        
-    <script src="/script.js"></script>
+
+        <script src="/script.js"></script>
 
     </div>
     <div id="footer">
