Started the formating of the date

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 <body>
     <div id="page">
         <h1>Currency Exchange</h1>
-        <div class="info-box">
-            <div id="date"></div>
-            <div id="time"></div>
+        <div id="info-box">
         </div>
         <form>
             <input type="text" id="ExchangeAmount">
