Finished, put in all the api options, added the footer.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 
 <head>
     <title>Currency Exchange</title>
+    <link rel="stylesheet" href="/styles.css">
 
 </head>
 
 <body>
-    <div id="page">
+    <div class="page">
         <h1>Currency Exchange</h1>
         <div id="info-box">
         </div>
@@ -18,6 +19,7 @@
                 <option value="AUD">Austrailian Dollars</option>
             </select>
         </form>
+        <p>is worth</p>
         <form>
             <input type="text" id="ExchangeAmount2">
             <select id="toCurrency">
@@ -31,6 +33,6 @@
 
     </div>
     <div id="footer">
-        <a id="github-link"></a>
+        <a href="https://github.com/tjbick/CreativeProject2">Git hub Project</a>
     </div>
 </body>
